<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:contentDescription="@string/movie_poster"
                    android:id="@+id/movie_poster"
                    android:layout_width="180dp"
                    android:layout_height="270dp"
                    android:background="@color/colorBackgroundActivity" />

                <ProgressBar
                    android:id="@+id/poster_loading_indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/error_loading_poster"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/problem_loading_movie_poster"
                    android:textAlignment="center"
                    android:visibility="invisible" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:paddingRight="10dp"
                    android:textAlignment="center"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold"
                    tools:text="Movie Title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/release_date"
                        android:textAlignment="center"
                        android:textAppearance="?android:textAppearanceSmall" />

                    <TextView
                        android:id="@+id/movie_release_data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textStyle="bold"
                        tools:text="2016-01-01" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rating"
                        android:textAlignment="center"
                        android:textAppearance="?android:textAppearanceSmall" />


                    <TextView
                        android:id="@+id/movie_vote_average"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:textAlignment="center"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textStyle="bold"
                        tools:text="4.3" />

                    <TextView
                        android:id="@+id/add_to_favs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add_to_favorites"
                        android:textAlignment="center"
                        android:textAppearance="?android:textAppearanceSmall" />

                    <ImageView
                        android:contentDescription="@string/star_image"
                        android:id="@+id/fav_star"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_star_border_black_36dp"
                        android:layout_gravity="center_horizontal"
                        android:onClick="addToFavorites"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/overview"
                android:textAppearance="?android:textAppearanceSmall" />

            <TextView
                android:id="@+id/movie_plot_synopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                tools:text="Plot Synopsis" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/trailers"
                    android:textAppearance="?android:textAppearanceSmall" />

                <TextView
                    android:id="@+id/trailers_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    tools:text="(0)" />

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/movie_trailer_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/reviews" />

                <TextView
                    android:id="@+id/reviews_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    tools:text="(6)" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/movie_review_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>