<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="180dp"
            android:layout_height="270dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:contentDescription="@string/movie_poster"
                android:id="@+id/movie_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@color/colorBackgroundActivity" />

            <ProgressBar
                android:id="@+id/poster_loading_indicator"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/error_loading_poster"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/problem_loading_movie_poster"
                android:textAlignment="center"
                android:visibility="invisible" />
        </FrameLayout>

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.619"
            app:layout_constraintLeft_toRightOf="@+id/frameLayout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/frameLayout"
            app:layout_constraintWidth_default="wrap"
            tools:text="Movie Title" />

        <TextView
            android:id="@+id/release_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/release_date"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceSmall"
            app:layout_constraintLeft_toLeftOf="@+id/movie_title"
            app:layout_constraintRight_toRightOf="@+id/movie_title"
            app:layout_constraintTop_toBottomOf="@+id/movie_title" />

        <TextView
            android:id="@+id/movie_release_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@+id/movie_title"
            app:layout_constraintRight_toRightOf="@+id/movie_title"
            app:layout_constraintTop_toBottomOf="@+id/release_date_title"
            tools:text="2016-01-01" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceSmall"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintLeft_toLeftOf="@+id/movie_release_data"
            app:layout_constraintRight_toRightOf="@+id/movie_release_data"
            app:layout_constraintTop_toBottomOf="@+id/movie_release_data" />


        <TextView
            android:id="@+id/movie_vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@+id/textView3"
            app:layout_constraintRight_toRightOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:text="4.3" />

        <TextView
            android:id="@+id/overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/overview"
            android:textAppearance="?android:textAppearanceSmall"
            app:layout_constraintLeft_toLeftOf="@+id/frameLayout"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

        <TextView
            android:id="@+id/movie_plot_synopsis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintWidth_default="wrap"
            android:textAppearance="?android:textAppearanceMedium"
            app:layout_constraintLeft_toLeftOf="@+id/overview"
            app:layout_constraintTop_toBottomOf="@+id/overview"
            tools:text="Plot Synopsis"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.502" />

        <TextView
            android:id="@+id/trailers_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/trailers"
            android:textAppearance="?android:textAppearanceSmall"
            app:layout_constraintTop_toBottomOf="@+id/movie_plot_synopsis"
            app:layout_constraintLeft_toLeftOf="@+id/overview" />

        <TextView
            android:id="@+id/trailers_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toRightOf="@+id/trailers_title"
            app:layout_constraintTop_toTopOf="@+id/trailers_title"
            tools:text="(6)" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/movie_trailer_recycler_view"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:scrollbars="vertical"
            app:layout_constraintLeft_toLeftOf="@+id/trailers_title"
            app:layout_constraintTop_toBottomOf="@+id/trailers_title" />

        <TextView
            android:id="@+id/reviews_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/reviews"
            app:layout_constraintLeft_toLeftOf="@+id/movie_trailer_recycler_view"
            app:layout_constraintTop_toBottomOf="@+id/movie_trailer_recycler_view" />

        <TextView
            android:id="@+id/reviews_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toRightOf="@+id/reviews_title"
            app:layout_constraintTop_toTopOf="@+id/reviews_title"
            tools:text="(6)" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/movie_review_recycler_view"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:layout_marginBottom="16dp"
            app:layout_constraintLeft_toLeftOf="@+id/reviews_title"
            app:layout_constraintTop_toBottomOf="@+id/reviews_title" />

        <TextView
            android:contentDescription="@string/star_image"
            android:id="@+id/add_to_favs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp"
            android:text="@string/add_to_favorites"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintLeft_toRightOf="@+id/frameLayout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_vote_average" />

        <ImageView
            android:contentDescription="@string/star_image"
            android:id="@+id/fav_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="5dp"
            android:onClick="addToFavorites"
            app:layout_constraintHorizontal_bias="0.562"
            app:layout_constraintLeft_toRightOf="@+id/frameLayout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_to_favs"
            app:srcCompat="@drawable/ic_star_border_black_36dp" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>