<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="4dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        app:contentPadding="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="#EEEEEE"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_default="wrap"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@+id/movie_poster"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/movie_poster"
                tools:text="Movie title" />

            <TextView
                android:id="@+id/release_date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="29dp"
                android:text="@string/release_date"
                app:layout_constraintLeft_toRightOf="@+id/movie_poster"
                app:layout_constraintTop_toBottomOf="@+id/movie_title" />

            <TextView
                android:id="@+id/vote_average_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="29dp"
                android:text="@string/rating"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_title" />

            <TextView
                android:id="@+id/release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@+id/release_date_title"
                app:layout_constraintRight_toRightOf="@+id/release_date_title"
                app:layout_constraintTop_toBottomOf="@+id/release_date_title"
                tools:text="22/12/2014" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/release_date"
                app:layout_constraintLeft_toLeftOf="@+id/vote_average_title"
                app:layout_constraintRight_toRightOf="@+id/vote_average_title"
                app:layout_constraintTop_toBottomOf="@+id/vote_average_title"
                tools:text="4.5" />

            <TextView
                android:id="@+id/overview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/overview"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@+id/movie_poster"
                app:layout_constraintTop_toBottomOf="@+id/movie_poster"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/plot_synopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="18dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/overview_title"
                tools:text="lalalla lalalla lalalal lalalal lall" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</ScrollView>